--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "findspark>=2.0.1",
+    "ipython>=9.1.0",
     "pyspark>=3.5.5",
     "python-dotenv>=1.1.0",
 ]
